--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "http-proxy-middleware": "^2.0.6",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
@@ -28,7 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://port-0-perfect-boiler-backend-1jx7m2gld43p7bv.gksl2.cloudtype.app/",
+  "proxy": "https://port-0-boiler-project-backend-1jx7m2gld43p7bv.gksl2.cloudtype.app/",
   "homepage": "https://port-0-perfect-boiler-backend-1jx7m2gld43p7bv.gksl2.cloudtype.app/",
   "eslintConfig": {
     "extends": [
